# controlly

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  main.c
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  docs.yml
docs/: serve_docs.py
docs/source/: conf.py  index.rst  pid.rst
docs/source/_static/: custom.css  custom.js
docs/source/api/: arena.rst  core.rst  matrix.rst  statespace.rst  tf.rst
docs/source/examples/: pid.rst  statespace_second_order.rst
docs/source/getting_started/: installation.rst
examples/raylib/: CMakeLists.txt  README.md  pid_leader_follower.c  shell.html  ss_second_order_parameters.m  statespace_second_order.c
examples/raylib/pid_leader_follower/: pid_leader_follower.c
examples/raylib/statespace_second_order/: statespace_second_order.c
include/ccontrol/: arena.h  core.h  matrix.h  statespace.h  tf.h
include/ccontrol/controllers/: pid.h
include/controlly/: arena.h  core.h  matrix.h  statespace.h  tf.h
include/controlly/controllers/: pid.h
src/: CMakeLists.txt  arena.c  arena.h  context.c  core.c  internal_common.h  main.c  matrix.c  matrix.h  tf.c  tf.h  vec.h
src/controllers/: pid.c
src/statespace/: mimo.c  router.c  siso.c  ss_internal.h
test/: CMakeLists.txt  generate_test_data.m  generate_tests.m  matlab_test_data.h  test_arena.c  test_generated.c  test_main.c  test_matrix.c  test_pid.c  test_polymath.c  test_statespace.c  test_transferfunction.c
test/matlab_parity/: mimo_parity.m  siso_parity.m
